# sql_one

./: Cargo.toml
crates/sql_one_execution/: Cargo.toml
crates/sql_one_execution/src/: error.rs  execution.rs  lib.rs  main.rs  table.rs
crates/sql_one_flexi_engine/: Cargo.toml  users_storage.json
crates/sql_one_flexi_engine/src/: lib.rs  row.rs  storage.rs
crates/sql_one_flexi_engine/src/page/: error.rs  mod.rs  page.rs  serializer.rs  table.rs
crates/sql_one_parser/: Cargo.toml
crates/sql_one_parser/src/: ast.rs  error.rs  lib.rs  main.rs  parser.rs  value.rs
crates/sql_one_parser/src/commands/: create.rs  create_test.rs  insert.rs  mod.rs  select.rs  select_condition.rs
crates/sql_one_repl/: Cargo.toml  Person_storage.json  User_storage.json  execution.json  history.txt
crates/sql_one_repl/src/: main.rs
crates/sql_one_topology/: Cargo.toml
crates/sql_one_topology/src/: lib.rs  main.rs  parser.rs  rpc.rs
