[package]
name = "sql_one_execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_one_parser = { path = "../sql_one_parser"}
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"
bigdecimal = { version = "0.4.3", features = ["serde"] }
derive_more = "0.99.17"
miette = { version = "7.2.0", features = ["fancy"] }
