[package]
name = "sql_one_flexi_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.3", features = ["serde"] }
bincode = "1.3.3"
dirs = "5.0.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_derive = "1.0.199"
serde_json = "1.0.116"
sql_one_parser = { path = "../sql_one_parser"}
