[package]
name = "sql_one_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
nom-supreme = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"
bigdecimal = { version = "0.4.3", features = ["serde"] }
derive_more = "0.99.17"
miette = { version = "7.2.0", features = ["fancy"] }
