[package]
name = "sql_one_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.5.0"
rustyline = "14.0.0"
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"
sql_one_parser = { path = "../sql_one_parser"}
sql_one_execution = { path = "../sql_one_execution"}